syntax = "proto3";

package proto.template_bss;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message TemplateBssBodyRequest {
    string template_name = 1;
    string template_code = 2;
    string template_type = 4;
    string content = 5;
    bool status = 6;
}

message TemplateBssRequest {
    int32 limit = 1;
    int32 offset = 2;
    string template_name = 3;
    repeated string template_code = 4;
    repeated string template_type = 5;
    string content = 6;
    string status = 7;
}

message TemplateBssByIdRequest {
    string id = 1;
}

message TemplateBssResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

message TemplateBssPutRequest {
    string id = 1;
    string template_name = 2;
    string template_code = 3;
    string content = 4;
    bool status = 5;
}

message TemplateBssByIdResponse {
    string code = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
    string id = 4;
}

service TemplateBss {
    rpc PostTemplateBss (TemplateBssBodyRequest) returns (TemplateBssByIdResponse){
        option (google.api.http) = {
           post: "/bss/v1/template-bss", 
           body: "*"
        };
    };
    rpc GetTemplateBsses (TemplateBssRequest) returns (TemplateBssResponse){
        option (google.api.http) = {
           get: "/bss/v1/template-bss",
        };
    };
    rpc GetTemplateBssById (TemplateBssByIdRequest) returns (TemplateBssByIdResponse){
        option (google.api.http) = {
           get: "/bss/v1/template-bss/{id}",
        };
    };
    rpc PutTemplateBssById (TemplateBssPutRequest) returns (TemplateBssByIdResponse){
        option (google.api.http) = {
           put: "/bss/v1/template-bss/{id}",
           body: "*"
        };
    };
    rpc DeleteTemplateBssById(TemplateBssByIdRequest) returns (TemplateBssByIdResponse) {
        option (google.api.http) = {
           delete: "/bss/v1/template-bss/{id}",
        };
    };
}